@startuml
skinparam classAttributeIconSize 0

package simulation {
    class InputParameters {
        + InputParameters(String[]) throws FileNotFoundException
        + addParametersFromFile(String[]) throws FileNotFoundException
        + addParametersFromArguments(String[])
        + printInputParameters() : void
        + getAlpha() : double
        + getTotalNodes() : int
        + getMaxWeight() : int
        + getNestNode() : int
        + getBeta() : double
        + getDelta() : double
        + getEta() : double
        + getRho() : double
        + getGamma() : double
        + getColonySize() : int
        + getMaxSimulationTime() : double
        + getFileMatrix() : String[]
        - totalNodes : int
        - maxWeight : int
        - nestNode : int
        - alpha : double
        - beta : double
        - delta : double
        - eta : double
        - rho : double
        - gamma : double
        - colonySize : int
        - simulationMaxTime : double
        - fileMatrix : String[]
    }

    class Simulation {
        - parameters : InputParameters
        - graph : WeightedGraph
        - pheromones : Pheromones
        - antColony : List<Ant>
        - totalMoves : int
        - totalEvaporations : int
        - currentSimulationTime : double
        - hamiltonianCycleFound : List<HamiltonianCycle>
        - pec : PEC
        {static} - simulation: Simulation
        - Simulation(InputParameters, WeightedGraph)

        {static} + getSimulation() : Simulation
        {static} + getSimulation(InputParameters, WeightedGraph) : Simulation
        + initSimulation() : void
        + runSimulation() : void
        + getCurrentSimulationTime() : double
        + getTotalNodes() : int
        + getNestNode() : int
        + getAlpha() : double
        + getBeta() : double
        + getDelta() : double
        + getEta() : double
        + getRho() : double
        + getGamma() : double
        + getMaxWeight() : double
        + getColonySize() : int
        + getMaxSimulationTime() : double
        + getGraph() : WeightedGraph
        + getAntColony() : List<Ant>
        + getTotalMoves() : int
        + getTotalEvaporations() : int
        + getHamiltonianCycles() : List<HamiltonianCycle>
        + addHamiltonianCycle(HamiltonianCycle) : void
        + addAnt(Ant) : void
        + increaseCurrentTime(double) : void
        + increaseTotalMoves() : void
        + increaseTotalEvaporations() : void
        + addNewEvent(Event) : void
        + getBestCycle() : HamiltonianCycle
        + getTopCandidateCycles() : List<HamiltonianCycle>
    }
  
    Simulation "1" --* "1" InputParameters
    Simulation "1" --* "1" graph.WeightedGraph
    Simulation "1" --* "1" aco.Pheromones
    Simulation "1" --* "1..*" aco.Ant
    Simulation "1" --* "0..*" graph.HamiltonianCycle
    Simulation "1" --* "1" pec.PEC
}

@enduml